--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
           </li>
 
           <li class="social-item">
+            <a href="https://github.com/kovendhan5" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
             <a href="https://www.instagram.com/i_am_kovendhan/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
