--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box" >
-          <img src="./assets/images/1000000125.jpg" alt="kovendhan" width="80" style=" border-radius: 60%; width: 150px; height: 150px;object-fit: cover;">
+          <img src="./assets/images/1000000125.jpg" alt="kovendhan" width="80" style=" border-radius: 15%; width: 150px; height: 150px;object-fit: cover;">
         </figure>
 
         <div class="info-content">
           <h1 class="name" title="kovendhan">Kovendhan P</h1>
 
-          <p class="title">Frontend developer |<br> cloud computing & Devops Beginner</p>
+          <p class="titles">Frontend developer |<br> cloud computing & Devops Beginner</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -62,7 +62,7 @@
 
       <div class="sidebar-info_more">
 
-        <div class="separator"></div>
+        <!-- <div class="separator"></div> --><br>
 
         <ul class="contacts-list">
 
@@ -1012,6 +1012,39 @@ I've completed a website for an IEEE TechX event along with Bejisto Joseph. This
             </button>
 
           </form>
+
+          <div class="sidebar-info_more1">
+
+          <div class="separator" ></div>
+
+        <ul class="social-list1" style="display: flex;flex-direction: row;justify-content: center;align-items: center;gap: 10px;" >
+
+          <li class="social-item">
+            <a href="https://wa.me/+917695882909" class="social-link">
+              <ion-icon name="logo-whatsapp"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://www.linkedin.com/in/kovendhanp/" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://github.com/kovendhan5" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://www.instagram.com/i_am_kovendhan/" class="social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
+
+        </ul>
+      </div>
 
         </section>
 
