--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
           </li>
 
           <li class="social-item">
+            <a href="https://hub.docker.com/repositories/kovendhan5" class="social-link">
+              <ion-icon name="logo-docker"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
             <a href="https://www.instagram.com/i_am_kovendhan/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
@@ -354,6 +360,12 @@
           <li class="social-item">
             <a href="https://github.com/kovendhan5" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://hub.docker.com/repositories/kovendhan5" class="social-link">
+              <ion-icon name="logo-docker"></ion-icon>
             </a>
           </li>
           
@@ -1156,6 +1168,12 @@ I've completed a website for an IEEE TechX event along with Bejisto Joseph. This
           <li class="social-item">
             <a href="https://github.com/kovendhan5" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://hub.docker.com/repositories/kovendhan5" class="social-link">
+              <ion-icon name="logo-docker"></ion-icon>
             </a>
           </li>
 
